...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <Button
        android:id="@+id/view_city_info_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="City, State, Country" />

    <LinearLayout
        android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="64dp"
            android:text="Map" />

        <Button
            android:id="@+id/remove_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="#FD0000"
            android:text="X"
            android:textColor="@android:color/white" />
...
