...
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/selected_city_text"
        app:layout_constraintTop_toBottomOf="@+id/selected_city_text">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:visibility="gone"
            tools:visibility="visible" />

...
